@@ -59,7 +59,9 @@ The configuration file for B<remctld>, overriding the default path.
 
 =item B<-h>
 
-Show a brief usage message and then exit.
+Show a brief usage message and then exit.  This usage method will include
+a list of supported ACL types and can be used to determine if optional ACL
+methods were compiled into a given B<remctld> build.
 
 =item B<-k> I<keytab>
 
@@ -314,6 +316,9 @@ This method is supported only if B<remctld> was compiled with PCRE support
 by using the C<--with-pcre> configure option.
 
 =back
+
+To see the list of ACL types supported by a particular build of
+B<remctld>, run C<remctld -h>.
 
 The keyword ANYUSER may be used instead of the ACLs to allow access to all
 users.  The user still needs to authenticate to B<remctld>; this only
